--- a/AsyncInn/AsyncInn/AsyncInn.csproj
+++ b/AsyncInn/AsyncInn/AsyncInn.csproj
@@ -3,22 +3,25 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <UserSecretsId>8e0c7a00-990d-4a29-a550-35bfeb74599c</UserSecretsId>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Content Include="Views\img\hotel.jpg" />
-  </ItemGroup>
 
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <Folder Include="Views\img\" />
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <None Include="wwwroot\img\hotel.jpg" />
   </ItemGroup>
 
 </Project>
